--- a/ors-config.yml
+++ b/ors-config.yml
@@ -1,343 +1,290 @@
-################################################################################################
-### Minimal configuration example file for openrouteservice. For a description please visit: ###
-### https://giscience.github.io/openrouteservice/run-instance/configuration/                 ###
-################################################################################################
+################################################################################
+### Configuration for openrouteservice
+################################################################################
 ors:
+  ########################################################################
+  # 1) The "engine" block
+  ########################################################################
   engine:
+    # Basic engine settings
+    init_threads: 1
+    preparation_mode: false
+    graphs_data_access: RAM_STORE
+
+    # Elevation settings
+    elevation:
+      preprocessed: false
+      data_access: MMAP
+      cache_clear: false
+      provider: multi
+      cache_path: elevation_cache
+
+    # This "profile_default" block points to your .osm.pbf file
+    # and has global build/service options that are inherited by all profiles,
+    # unless overridden by that profile’s own block below.
     profile_default:
+      enabled: false
+      graph_path: graphs
       build:
-        source_file: D:\ECOLAB\martinique-latest.osm.pbf
+        source_file: C:\Users\selaazdo-24\Downloads\france-latest.osm.pbf
+        elevation: true
+        elevation_smoothing: false
+        encoder_flags_size: 8
+        instructions: true
+        optimize: false
+        traffic: false
+        maximum_speed_lower_bound: 80
+        location_index_resolution: 500
+        location_index_search_iterations: 4
+        interpolate_bridges_and_tunnels: true
+        preparation:
+          min_network_size: 200
+          methods:
+            lm:
+              enabled: true
+              threads: 1
+              weightings: recommended,shortest
+              landmarks: 16
+      service:
+        maximum_distance: 100000
+        maximum_distance_dynamic_weights: 100000
+        maximum_distance_avoid_areas: 100000
+        maximum_waypoints: 50
+        maximum_snapping_radius: 400
+        maximum_distance_alternative_routes: 100000
+        maximum_distance_round_trip_routes: 100000
+        maximum_visited_nodes: 1000000
+        force_turn_costs: false
+        allow_custom_models: true
+        execution:
+          methods:
+            lm:
+              active_landmarks: 8
+
+    ########################################################################
+    # Profile-specific overrides. You can enable or disable each as needed.
+    ########################################################################
     profiles:
       driving-car:
-        enabled: true
-      cycling-regular:
-        enabled: true
-      foot-walking:
+        encoder_name: driving-car
+        build:
+          encoder_options:
+            turn_costs: true
+            block_fords: false
+            use_acceleration: true
+            enable_custom_models: false
+          preparation:
+            min_network_size: 200
+            methods:
+              ch:
+                enabled: true
+                threads: 1
+                weightings: fastest
+              lm:
+                enabled: false
+              core:
+                enabled: true
+                threads: 1
+                weightings: fastest,shortest
+                landmarks: 64
+                lmsets: highways;allow_all
+          ext_storages:
+            WayCategory:
+            HeavyVehicle:
+            Tollways:
+            WaySurfaceType:
+            RoadAccessRestrictions:
+              use_for_warnings: true
+        service:
+          execution:
+            methods:
+              lm:
+                active_landmarks: 6
+              core:
+                active_landmarks: 6
         enabled: true
 
+      cycling-regular:
+        encoder_name: cycling-regular
+        build:
+          encoder_options:
+            consider_elevation: true
+            turn_costs: true
+            block_fords: false
+            enable_custom_models: false
+          ext_storages:
+            WayCategory:
+            WaySurfaceType:
+            HillIndex:
+            TrailDifficulty:
+        enabled: true
+
+      foot-walking:
+        encoder_name: foot-walking
+        build:
+          encoder_options:
+            block_fords: false
+            enable_custom_models: false
+          ext_storages:
+            WayCategory:
+            WaySurfaceType:
+            HillIndex:
+            TrailDifficulty:
+        enabled: true
+
+      driving-hgv:
+        encoder_name: driving-hgv
+        build:
+          encoder_options:
+            turn_costs: true
+            block_fords: false
+            use_acceleration: true
+            enable_custom_models: false
+          preparation:
+            min_network_size: 200
+            methods:
+              ch:
+                enabled: true
+                threads: 1
+                weightings: recommended
+              lm:
+                enabled: false
+              core:
+                enabled: true
+                threads: 1
+                weightings: recommended,shortest
+                landmarks: 64
+                lmsets: highways;allow_all
+          ext_storages:
+            WayCategory:
+            HeavyVehicle:
+              restrictions: true
+            Tollways:
+            WaySurfaceType:
+        service:
+          execution:
+            methods:
+              core:
+                active_landmarks: 6
+
+      # Additional profiles if desired (cycling-mountain, foot-hiking, etc.)
+      # Just set "enabled: true" if you want them built.
+
+  ########################################################################
+  # 2) The "endpoints" block (routing, matrix, isochrones, snap, etc.)
+  ########################################################################
+  endpoints:
+    routing:
+      enabled: true
+      attribution: openrouteservice.org, OpenStreetMap contributors, tmc - BASt
+      gpx_name: ORSRouting
+      gpx_description: This is a directions instructions file as GPX, generated from openrouteservice
+      gpx_base_url: https://openrouteservice.org/
+      gpx_support_mail: support@openrouteservice.org
+      gpx_author: openrouteservice
+      gpx_content_licence: LGPL 3.0
+      maximum_avoid_polygon_area: 200000000
+      maximum_avoid_polygon_extent: 20000
+      maximum_alternative_routes: 3
+
+    matrix:
+      enabled: true
+      attribution: openrouteservice.org, OpenStreetMap contributors
+      maximum_routes: 2500
+      maximum_routes_flexible: 25
+      maximum_visited_nodes: 100000
+      maximum_search_radius: 2000
+      u_turn_costs: -1
+
+    isochrones:
+      enabled: true
+      attribution: openrouteservice.org, OpenStreetMap contributors
+      maximum_locations: 2
+
+      # <-- CRITICAL: We want up to 3 intervals (0–300, 300–600, 600–900, etc.)
+      maximum_intervals: 3
+
+      allow_compute_area: true
+
+      # How far or how long can we go by default
+      maximum_range_distance_default: 50000
+      maximum_range_time_default: 18000
+
+      # If you need special limits for driving-car / driving-hgv:
+      maximum_range_distance:
+        - profiles: driving-car, driving-hgv
+          value: 100000
+      maximum_range_time:
+        - profiles: driving-car, driving-hgv
+          value: 3600
+
+      fastisochrones:
+        maximum_range_distance_default: 50000
+        maximum_range_time_default: 18000
+        maximum_range_distance:
+          - profiles: driving-car, driving-hgv
+            value: 500000
+        maximum_range_time:
+          - profiles: driving-car, driving-hgv
+            value: 10800
+
+    snap:
+      enabled: true
+      attribution: openrouteservice.org, OpenStreetMap contributors
+      maximum_locations: 5000
+
+  ########################################################################
+  # 3) CORS, messages, etc.
+  ########################################################################
+  cors:
+    allowed_origins: "*"
+    allowed_headers: Content-Type, X-Requested-With, accept, Origin, Access-Control-Request-Method, Access-Control-Request-Headers, Authorization
+    preflight_max_age: 600
+
+  messages:
+
 ################################################################################
-### Configuration file for openrouteservice. For a description please visit: ###
-### https://giscience.github.io/openrouteservice/run-instance/configuration/ ###
+### 4) Server & Spring settings
 ################################################################################
-##### General server settings #####
-#server:
-#  port: 8082
-#  error:
-#    whitelabel:
-#      enabled: false
-#  # Keep the context-path at / else the war file run with tomcat will have the context-path of /ors/v2 as well.
-#  servlet:
-#    context-path: /ors
-#  tomcat:
-#    keep-alive-timeout: 30000
-#spring:
-#  profiles:
-#    active: default
-#  mvc:
-#    servlet:
-#      path: /
-##### Settings related to springdoc #####
-#springdoc:
-#  swagger-ui:
-#    enabled: true
-#    path: /swagger-ui
-#    tryItOutEnabled: true
-#    filter: false
-#    syntaxHighlight:
-#      activated: true
-#    showExtensions: true
-#  api-docs:
-#    path: /v2/api-docs
-#    version: OPENAPI_3_0
-#  packages-to-scan: org.heigit.ors
-#  pathsToMatch: /v2/**
-##### Logging settings #####
-#logging:
-#  file:
-#    name: ./logs/ors.log
-#  pattern:
-#    console: "%d{yyyy-MM-dd HH:mm:ss} %highlight{%-7p} %style{%50t}{Cyan} %style{[ %-40.40c{1.} ]}{Bright Cyan}   %m%n"
-#    file: "%d{yyyy-MM-dd HH:mm:ss} %p [%-40.40c{1.}] - %m%n"
-#  level:
-#    root: WARN
-#    org.heigit: INFO
-##### openrouteservice specific settings #####
-#ors:
-#  cors:
-#    allowed_origins: "*"
-#    allowed_headers: Content-Type, X-Requested-With, accept, Origin, Access-Control-Request-Method, Access-Control-Request-Headers, Authorization
-#    preflight_max_age: 600
-#  messages:
-#  ##### ORS endpoints settings #####
-#  endpoints:
-#    routing:
-#      enabled: true
-#      attribution: openrouteservice.org, OpenStreetMap contributors, tmc - BASt
-#      gpx_name: ORSRouting
-#      gpx_description: This is a directions instructions file as GPX, generated from openrouteservice
-#      gpx_base_url: https://openrouteservice.org/
-#      gpx_support_mail: support@openrouteservice.org
-#      gpx_author: openrouteservice
-#      gpx_content_licence: LGPL 3.0
-#      maximum_avoid_polygon_area: 200000000
-#      maximum_avoid_polygon_extent: 20000
-#      maximum_alternative_routes: 3
-#    matrix:
-#      enabled: true
-#      attribution: openrouteservice.org, OpenStreetMap contributors
-#      maximum_routes: 2500
-#      maximum_routes_flexible: 25
-#      maximum_visited_nodes: 100000
-#      maximum_search_radius: 2000
-#      u_turn_costs: -1
-#    isochrones:
-#      enabled: true
-#      attribution: openrouteservice.org, OpenStreetMap contributors
-#      maximum_locations: 2
-#      maximum_intervals: 1
-#      allow_compute_area: true
-#      maximum_range_distance_default: 50000
-#      maximum_range_distance:
-#        - profiles: driving-car, driving-hgv
-#          value: 100000
-#      maximum_range_time_default: 18000
-#      maximum_range_time:
-#        - profiles: driving-car, driving-hgv
-#          value: 3600
-#      fastisochrones:
-#        maximum_range_distance_default: 50000
-#        maximum_range_distance:
-#          - profiles: driving-car, driving-hgv
-#            value: 500000
-#        maximum_range_time_default: 18000
-#        maximum_range_time:
-#          - profiles: driving-car, driving-hgv
-#            value: 10800
-#    snap:
-#      enabled: true
-#      attribution: openrouteservice.org, OpenStreetMap contributors
-#      maximum_locations: 5000
-#  ##### ORS engine settings #####
-#  engine:
-#    init_threads: 1
-#    preparation_mode: false
-#    graphs_data_access: RAM_STORE
-#    elevation:
-#      preprocessed: false
-#      data_access: MMAP
-#      cache_clear: false
-#      provider: multi
-#      cache_path: elevation_cache
-#    profile_default:
-#      enabled: false
-#      graph_path: graphs
-#      build:
-#        source_file:
-#        elevation: true
-#        elevation_smoothing: false
-#        encoder_flags_size: 8
-#        instructions: true
-#        optimize: false
-#        traffic: false
-#        maximum_speed_lower_bound: 80
-#        location_index_resolution: 500
-#        location_index_search_iterations: 4
-#        interpolate_bridges_and_tunnels: true
-#        preparation:
-#          min_network_size: 200
-#          methods:
-#            lm:
-#              enabled: true
-#              threads: 1
-#              weightings: recommended,shortest
-#              landmarks: 16
-#      service:
-#        maximum_distance: 100000
-#        maximum_distance_dynamic_weights: 100000
-#        maximum_distance_avoid_areas: 100000
-#        maximum_waypoints: 50
-#        maximum_snapping_radius: 400
-#        maximum_distance_alternative_routes: 100000
-#        maximum_distance_round_trip_routes: 100000
-#        maximum_visited_nodes: 1000000
-#        force_turn_costs: false
-#        allow_custom_models: true
-#        execution:
-#          methods:
-#            lm:
-#              active_landmarks: 8
-#    ##### Profile specific settings,                               #####
-#    ##### overriding the properties in ors.engine.profile_default. #####
-#    ##### Profile defaults defined here are not overridden by      #####
-#    ##### a custom YAML file's ors.engine.profile_default, but by  #####
-#    ##### a custom YAML file's ors.engine.profiles.<profile>       #####
-#    profiles:
-#      driving-car:
-#        encoder_name: driving-car
-#        build:
-#          encoder_options:
-#            turn_costs: true
-#            block_fords: false
-#            use_acceleration: true
-#            enable_custom_models: false
-#          preparation:
-#            min_network_size: 200
-#            methods:
-#              ch:
-#                enabled: true
-#                threads: 1
-#                weightings: fastest
-#              lm:
-#                enabled: false
-#              core:
-#                enabled: true
-#                threads: 1
-#                weightings: fastest,shortest
-#                landmarks: 64
-#                lmsets: highways;allow_all
-#          ext_storages:
-#            WayCategory:
-#            HeavyVehicle:
-#            Tollways:
-#            WaySurfaceType:
-#            RoadAccessRestrictions:
-#              use_for_warnings: true
-#        service:
-#          execution:
-#            methods:
-#              lm:
-#                active_landmarks: 6
-#              core:
-#                active_landmarks: 6
-#      driving-hgv:
-#        encoder_name: driving-hgv
-#        build:
-#          encoder_options:
-#            turn_costs: true
-#            block_fords: false
-#            use_acceleration: true
-#            enable_custom_models: false
-#          preparation:
-#            min_network_size: 200
-#            methods:
-#              ch:
-#                enabled: true
-#                threads: 1
-#                weightings: recommended
-#              lm:
-#                enabled: false
-#              core:
-#                enabled: true
-#                threads: 1
-#                weightings: recommended,shortest
-#                landmarks: 64
-#                lmsets: highways;allow_all
-#          ext_storages:
-#            WayCategory:
-#            HeavyVehicle:
-#              restrictions: true
-#            Tollways:
-#            WaySurfaceType:
-#        service:
-#          execution:
-#            methods:
-#              core:
-#                active_landmarks: 6
-#      cycling-regular:
-#        encoder_name: cycling-regular
-#        build:
-#          encoder_options:
-#            consider_elevation: true
-#            turn_costs: true
-#            block_fords: false
-#            enable_custom_models: false
-#          ext_storages:
-#            WayCategory:
-#            WaySurfaceType:
-#            HillIndex:
-#            TrailDifficulty:
-#      cycling-mountain:
-#        encoder_name: cycling-mountain
-#        build:
-#          encoder_options:
-#            consider_elevation: true
-#            turn_costs: true
-#            block_fords: false
-#            enable_custom_models: false
-#          ext_storages:
-#            WayCategory:
-#            WaySurfaceType:
-#            HillIndex:
-#            TrailDifficulty:
-#      cycling-road:
-#        encoder_name: cycling-road
-#        build:
-#          encoder_options:
-#            consider_elevation: true
-#            turn_costs: true
-#            block_fords: false
-#            enable_custom_models: false
-#          ext_storages:
-#            WayCategory:
-#            WaySurfaceType:
-#            HillIndex:
-#            TrailDifficulty:
-#      cycling-electric:
-#        encoder_name: cycling-electric
-#        build:
-#          encoder_options:
-#            consider_elevation: true
-#            turn_costs: true
-#            block_fords: false
-#            enable_custom_models: false
-#          ext_storages:
-#            WayCategory:
-#            WaySurfaceType:
-#            HillIndex:
-#            TrailDifficulty:
-#      foot-walking:
-#        encoder_name: foot-walking
-#        build:
-#          encoder_options:
-#            block_fords: false
-#            enable_custom_models: false
-#          ext_storages:
-#            WayCategory:
-#            WaySurfaceType:
-#            HillIndex:
-#            TrailDifficulty:
-#      foot-hiking:
-#        encoder_name: foot-hiking
-#        build:
-#          encoder_options:
-#            block_fords: false
-#            enable_custom_models: false
-#          ext_storages:
-#            WayCategory:
-#            WaySurfaceType:
-#            HillIndex:
-#            TrailDifficulty:
-#      wheelchair:
-#        encoder_name: wheelchair
-#        build:
-#          encoder_options:
-#            block_fords: true
-#            enable_custom_models: false
-#          ext_storages:
-#            WayCategory:
-#            WaySurfaceType:
-#            Wheelchair:
-#              kerbs_on_crossings: true
-#            OsmId:
-#        service:
-#          maximum_snapping_radius: 50
-#      public-transport:
-#        encoder_name: public-transport
-#        build:
-#          encoder_options:
-#            block_fords: false
-#            enable_custom_models: false
-#          elevation: true
-#          gtfs_file: ./src/test/files/vrn_gtfs_cut.zip
-#        service:
-#          maximum_visited_nodes: 1000000
+server:
+  port: 8082
+  error:
+    whitelabel:
+      enabled: false
+  # keep context-path at /ors
+  servlet:
+    context-path: /ors
+  tomcat:
+    keep-alive-timeout: 30000
+
+spring:
+  profiles:
+    active: default
+  mvc:
+    servlet:
+      path: /
+
+springdoc:
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui
+    tryItOutEnabled: true
+    filter: false
+    syntaxHighlight:
+      activated: true
+    showExtensions: true
+  api-docs:
+    path: /v2/api-docs
+    version: OPENAPI_3_0
+  packages-to-scan: org.heigit.ors
+  pathsToMatch: /v2/**
+
+logging:
+  file:
+    name: ./logs/ors.log
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} %highlight{%-7p} %style{%50t}{Cyan} %style{[ %-40.40c{1.} ]}{Bright Cyan}   %m%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss} %p [%-40.40c{1.}] - %m%n"
+  level:
+    root: WARN
+    org.heigit: INFO
